# vaultmeister

./: .gitignore  README.md  dendrite.yaml  package.json
.github/workflows/: build.yml  lint.yml
app/: globals.css  page.tsx
app/explorer/: page.tsx
components/: Button.tsx  Input.tsx
scripts/: build-dendrite.sh  create-account.sh  start-dendrite.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
